@startuml

title __COMPANY's Class Diagram__\n

  namespace com.company {
    abstract class com.company.Animal {
        - name : String
        + Animal()
        {abstract} + greets()
    }
  }
  

  namespace com.company {
    class com.company.BigDog {
        + BigDog()
        + greets()
        + greets()
        + greets()
    }
  }
  

  namespace com.company {
    class com.company.Cat {
        + Cat()
        + greets()
    }
  }
  

  namespace com.company {
    class com.company.Dog {
        + Dog()
        + greets()
        + greets()
    }
  }
  

  namespace com.company {
    class com.company.Main {
        {static} + main()
    }
  }
  

  com.company.BigDog -up-|> com.company.Dog
  com.company.Cat -up-|> com.company.Animal
  com.company.Dog -up-|> com.company.Animal


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
